src/test/deca/syntax/valid/synt/protected.deca
class Test {
    protected int x = 2;
}
