src/test/deca/syntax/invalid/synt/return.deca
class Test {
    int x = 2:

    int getX() {
        return x;
    }
}
